--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             The Master
         </h2>
             <img class="dante-statue" src="dante-picture.png" alt="Dante Alighieri Picture">
-        <p>
+        <p class='p2'>
             Dante Alighieri, probably baptized Durante di Alighiero degli Alighieri and often referred to simply as Dante, was an Italian poet. His Divine Comedy, originally called Comedia (modern Italian: Commedia) and later christened Divina by Giovanni Boccaccio, is widely considered the most important poem of the Middle Ages and the greatest literary work in the Italian language.
         </p>
-        <p>
+        <p class='p2'>
             Dante was instrumental in establishing the literature of Italy, and his depictions of Hell, Purgatory and Heaven provided inspiration for the larger body of Western art. He is cited as an influence on Geoffrey Chaucer, John Milton and Alfred Tennyson, among many others. In addition, the first use of the interlocking three-line rhyme scheme, or the terza rima, is attributed to him. He is described as the "father" of the Italian language, and in Italy he is often referred to as il Sommo Poeta ("the Supreme Poet"). Dante, Petrarch, and Boccaccio are also called the tre corone ("three crowns") of Italian literature.
         </p>
     </div>
