--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </header>
         </div>
     </div>
-  
+    <img class='text-dividers' id='first-divider' src='text-div-1.png'text divider'>
     <div class="row opacity" id="img-div">
         <p class='text-img'>"Midway upon the journey of our life,</p>
         <p class='text-img'>I found myself within a forest dark,</p>
@@ -23,6 +23,7 @@
       - INFERNO, CANTO I; I - III verses</span></p>
            <img class="img-responsive, text-img" id="dante-al" src="dante-statue.png" alt="Dante Alighieri">
     </div>
+    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
     <div class="content" id="content1">
         <h2>
             His Life & Chronology
@@ -69,6 +70,7 @@
   <li>1321 - Dante falls ill on return from Venice, where he had been sent as ambassador by Guido Da Polenta, and dies September 13 or 14.</li>
       </ol>
     </div>
+    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
     <div class="content" id="content2">
         <h2 id='text-statue'>
             The Master
@@ -81,6 +83,7 @@
             Dante was instrumental in establishing the literature of Italy, and his depictions of Hell, Purgatory and Heaven provided inspiration for the larger body of Western art. He is cited as an influence on Geoffrey Chaucer, John Milton and Alfred Tennyson, among many others. In addition, the first use of the interlocking three-line rhyme scheme, or the terza rima, is attributed to him. He is described as the "father" of the Italian language, and in Italy he is often referred to as il Sommo Poeta ("the Supreme Poet"). Dante, Petrarch, and Boccaccio are also called the tre corone ("three crowns") of Italian literature.
         </p>
     </div>
+    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
     <div class="content" id="content3">
         <h2>
             His Work: The Divine Comedy
@@ -123,7 +126,7 @@
   </div>
     </div>
     </div>
-  
+    <img class='text-dividers' id='second-divider' src='text-div-3.png' alt='text divider'>
     <div class="row">
         <div class="footer col-xs-12" id="footer">
                 <img id='dante-bust' src="dante-bust.png" alt='Dante Alighieri Bust'>
