--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=">
   <link rel="stylesheet" href="dante-alighieri-tribute.css">
+  <script src="script.js"></script>
   <title>Dante Alighieri Tribute</title>
 </head>
 <body>
@@ -129,7 +130,8 @@
     <img class='text-dividers' id='second-divider' src='text-div-3.png' alt='text divider'>
     <div class="row">
         <div class="footer col-xs-12" id="footer">
-                <img id='dante-bust' src="dante-bust.png" alt='Dante Alighieri Bust'>
+          <img id='dante-bust' onclick="playSong()" src="dante-bust.png" alt='Dante Alighieri Bust'>
+              <audio src="vide-cor-meum.mp3" id="song"></audio>
             <p class="text-center footer-text">
                 All text extracted from Wikipedia.org and www3.nd.edu. For more information, visit: 
                 <a class="footer-text" href="https://en.wikipedia.org/wiki/Dante_Alighieri" target="_blank"> Dante Alighieri - Wikipedia</a> and <a class="footer-text" href="https://www3.nd.edu/~italnet/Dante/text/Chronology.html#:~:text=Chronology%20of%20Dante%20Alighieri%20(1265,1283%20%2D%20Dante's%20father%20dies." target="_blank"> Dante Alighieri - ww3.nd.edu.</a>
