--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div class="rows">
   <div class="columns">
     <img class='dante-pictures' src="doré-1.jpg" alt="Inferno">
-    <p class='image-descript'>Inferno - Canto XXV</p>
+    <p class='image-descript'>Inferno - Canto I</p>
   </div>
   <div class="columns">
     <img class='dante-pictures' src="doré-3.jpg" alt="Inferno">
