--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <img class='text-dividers' src='text-div-2.png' alt='text divider'>
     <div class="content" id="content1">
-        <h2>
+        <h2 id='special-h2'>
             His Life & Chronology
         </h2>
       <ol>
