--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     </div>
     <img class='text-dividers' id='first-divider' src='text-div-1.png'text divider'>
     <div class="row opacity" id="img-div">
-        <p class='text-img'>"Midway upon the journey of our life,</p>
-        <p class='text-img'>I found myself within a forest dark,</p>
-        <p class='text-img'>For the straightforward pathway had been lost."<br><span id='subquote'>
-      - INFERNO, CANTO I; I - III verses</span></p>
+        <h1 class='text-img'>"Midway upon the journey of our life,</h1>
+        <h1 class='text-img'>I found myself within a forest dark,</h1>
+        <h1 class='text-img'>For the straightforward pathway had been lost."</h1>
+        <h3 id='subquote'>- INFERNO, CANTO I; I - III verses</h3>
            <img class="img-responsive, text-img" id="dante-al" src="dante-statue.png" alt="Dante Alighieri">
     </div>
     <img class='text-dividers' src='text-div-2.png' alt='text divider'>
