--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=">
-  <link rel="stylesheet" href="dante-alighieri-tribute.css">
+  <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
   <title>Dante Alighieri Tribute</title>
 </head>
@@ -21,7 +21,7 @@
         <h1 class='text-img'>"Midway upon the journey of our life,</h1>
         <h1 class='text-img'>I found myself within a forest dark,</h1>
         <h1 class='text-img'>For the straightforward pathway had been lost."</h1>
-        <h3 id='subquote'>- INFERNO, CANTO I; I - III verses</h3>
+        <p id='subquote'>- INFERNO, CANTO I; I - III verses</p>
            <img class="img-responsive, text-img" id="dante-al" src="dante-statue.png" alt="Dante Alighieri">
     </div>
     <img class='text-dividers' src='text-div-2.png' alt='text divider'>
