--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
             </header>
         </div>
     </div>
-    <img class='text-dividers' id='first-divider' src='text-div-1.png'text divider'>
+    <img class='text-dividers' id='first-divider' src='assets/images/text-div-1.png' alt='text divider'>
     <div class="row opacity" id="img-div">
         <h1 class='text-img'>"Midway upon the journey of our life,</h1>
         <h1 class='text-img'>I found myself within a forest dark,</h1>
         <h1 class='text-img'>For the straightforward pathway had been lost."</h1>
         <p id='subquote'>- INFERNO, CANTO I; I - III verses</p>
-           <img class="img-responsive, text-img" id="dante-al" src="dante-statue.png" alt="Dante Alighieri">
+           <img class="img-responsive, text-img" id="dante-al" src="assets/images/dante-statue.png" alt="Dante Alighieri">
     </div>
-    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
     <div class="content" id="content1">
         <h2 id='special-h2'>
             His Life & Chronology
@@ -71,12 +71,12 @@
   <li>1321 - Dante falls ill on return from Venice, where he had been sent as ambassador by Guido Da Polenta, and dies September 13 or 14.</li>
       </ol>
     </div>
-    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
     <div class="content" id="content2">
         <h2 id='text-statue'>
             The Master
         </h2>
-            <img class="dante-statue" src="dante-picture.png" alt="Dante Alighieri Picture">
+            <img class="dante-statue" src="assets/images/dante-picture.png" alt="Dante Alighieri Picture">
         <p class='p2'>
             Dante Alighieri, probably baptized Durante di Alighiero degli Alighieri and often referred to simply as Dante, was an Italian poet. His Divine Comedy, originally called Comedia (modern Italian: Commedia) and later christened Divina by Giovanni Boccaccio, is widely considered the most important poem of the Middle Ages and the greatest literary work in the Italian language.
         </p>
@@ -84,7 +84,7 @@
             Dante was instrumental in establishing the literature of Italy, and his depictions of Hell, Purgatory and Heaven provided inspiration for the larger body of Western art. He is cited as an influence on Geoffrey Chaucer, John Milton and Alfred Tennyson, among many others. In addition, the first use of the interlocking three-line rhyme scheme, or the terza rima, is attributed to him. He is described as the "father" of the Italian language, and in Italy he is often referred to as il Sommo Poeta ("the Supreme Poet"). Dante, Petrarch, and Boccaccio are also called the tre corone ("three crowns") of Italian literature.
         </p>
     </div>
-    <img class='text-dividers' src='text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
     <div class="content" id="content3">
         <h2>
             His Work: The Divine Comedy
@@ -92,46 +92,46 @@
         <p>
             The Divine Comedy, Italian La divina commedia, original name La commedia, long narrative poem written in Italian circa 1308-21 by Dante. It is usually held to be one of the world's great works of literature. Divided into three major sections: Inferno, Purgatorio, and Paradiso, the narrative traces the journey of Dante from darkness and error to the revelation of the divine light, culminating in the Beatific Vision of God.
         </p>
-      <img class='dante-pictures' src="dante-painting.jpg" alt="Dante and Virgl">
+      <img class='dante-pictures' src="assets/images/dante-painting.jpg" alt="Dante and Virgl">
     <p>
         Dante is guided by the Roman poet Virgil, who represents the epitome of human knowledge, from the dark wood through the descending circles of the pit of Hell (Inferno). Passing Lucifer at the pit's bottom, at the dead centre of the world, Dante and Virgil emerge on the beach of the island mountain of Purgatory. At the summit of Purgatory, where repentant sinners are purged of their sins, Virgil departs, having led Dante as far as human knowledge is able, to the threshold of Paradise. There Dante is met by Beatrice, embodying the knowledge of divine mysteries bestowed by Grace, who leads him through the successive ascending levels of heaven to the Empyrean, where he is allowed to glimpse, for a moment, the glory of God.
     </p>
         <h5>Gustave Doré's Illustrations</h5>
   <div class="rows">
   <div class="columns">
-    <img class='dante-pictures' src="doré-1.jpg" alt="Inferno">
+    <img class='dante-pictures' src="assets/images/doré-1.jpg" alt="Inferno">
     <p class='image-descript'>Inferno - Canto I</p>
   </div>
   <div class="columns">
-    <img class='dante-pictures' src="doré-3.jpg" alt="Inferno">
+    <img class='dante-pictures' src="assets/images/doré-3.jpg" alt="Inferno">
     <p class='image-descript'>Inferno - Canto III</p>
   </div>
   <div class="columns">
-    <img class='dante-pictures' src="doré-4.jpg" alt="Paradiso">
+    <img class='dante-pictures' src="assets/images/doré-4.jpg" alt="Paradiso">
     <p class='image-descript'>Paradiso - Canto XXXI</p>
   </div>
   </div>
       <div class="rows">
   <div class="columns">
-    <img class='dante-pictures' src="doré-2.jpg" alt="Inferno">
+    <img class='dante-pictures' src="assets/images/doré-2.jpg" alt="Inferno">
     <p class='image-descript'>Inferno - Canto XXV</p>
   </div>
   <div class="columns">
-    <img class='dante-pictures fix-oppacity' src="doré-6.jpg" alt="Paradiso">
+    <img class='dante-pictures fix-oppacity' src="assets/images/doré-6.jpg" alt="Paradiso">
     <p class='image-descript'>Paradiso - Canto XIV</p>
   </div>
   <div class="columns">
-    <img class='dante-pictures' src="doré-5.jpg" alt='Purgatorio'>
+    <img class='dante-pictures' src="assets/images/doré-5.jpg" alt='Purgatorio'>
     <p class='image-descript'>Purgatorio - Canto XXV</p>
   </div>
   </div>
     </div>
     </div>
-    <img class='text-dividers' id='second-divider' src='text-div-3.png' alt='text divider'>
+    <img class='text-dividers' id='second-divider' src='assets/images/text-div-3.png' alt='text divider'>
     <div class="row">
         <div class="footer col-xs-12" id="footer">
-          <img id='dante-bust' onclick="playSong()" src="dante-bust.png" alt='Dante Alighieri Bust'>
-              <audio src="vide-cor-meum.mp3" id="song"></audio>
+          <img id='dante-bust' onclick="playSong()" src="assets/images/dante-bust.png" alt='Dante Alighieri Bust'>
+              <audio src="assets/music/vide-cor-meum.mp3" id="song"></audio>
             <p class="text-center footer-text">
                 All text extracted from Wikipedia.org and www3.nd.edu. For more information, visit: 
                 <a class="footer-text" href="https://en.wikipedia.org/wiki/Dante_Alighieri" target="_blank"> Dante Alighieri - Wikipedia</a> and <a class="footer-text" href="https://www3.nd.edu/~italnet/Dante/text/Chronology.html#:~:text=Chronology%20of%20Dante%20Alighieri%20(1265,1283%20%2D%20Dante's%20father%20dies." target="_blank"> Dante Alighieri - ww3.nd.edu.</a>
