--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
             </header>
         </div>
     </div>
-    <img class='text-dividers' id='first-divider' src='assets/images/text-div-1.png' alt='text divider'>
+    <div class='rows1'>
+      <div class='columns1'>
+        <h1 class='menu'><a href="#Life">Life</a></h1>
+      </div>
+      <div class='columns1'>
+        <h1 class='menu'><a href="#Story">Story</a></h1>
+      </div>
+      <div class='columns1'>
+        <h1 class='menu'><a href="#Work">Work</a></h1>
+      </div>
+      </div>
     <div class="row opacity" id="img-div">
         <h1 class='text-img'>"Midway upon the journey of our life,</h1>
         <h1 class='text-img'>I found myself within a forest dark,</h1>
@@ -25,9 +35,9 @@
            <img class="img-responsive, text-img" id="dante-al" src="assets/images/dante-statue.png" alt="Dante Alighieri">
     </div>
     <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
-    <div class="content" id="content1">
+    <a id="Life"><div class="content" id="content1">
         <h2 id='special-h2'>
-            His Life & Chronology
+          His Life & Chronology
         </h2>
       <ol>
   <li>1265 - Dante is born, probably May 29, under the sign of Gemini.</li>
@@ -72,9 +82,9 @@
       </ol>
     </div>
     <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
-    <div class="content" id="content2">
+    <a id="Story"><div class="content" id="content2">
         <h2 id='text-statue'>
-            The Master
+             The Master
         </h2>
             <img class="dante-statue" src="assets/images/dante-picture.png" alt="Dante Alighieri Picture">
         <p class='p2'>
@@ -85,13 +95,14 @@
         </p>
     </div>
     <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
-    <div class="content" id="content3">
+    <a id="Work"><div class="content" id="content3">
         <h2>
-            His Work: The Divine Comedy
+          His Work: The Divine Comedy
         </h2>
         <p>
             The Divine Comedy, Italian La divina commedia, original name La commedia, long narrative poem written in Italian circa 1308-21 by Dante. It is usually held to be one of the world's great works of literature. Divided into three major sections: Inferno, Purgatorio, and Paradiso, the narrative traces the journey of Dante from darkness and error to the revelation of the divine light, culminating in the Beatific Vision of God.
-         <br><br>   Dante is guided by the Roman poet Virgil, who represents the epitome of human knowledge, from the dark wood through the descending circles of the pit of Hell (Inferno). Passing Lucifer at the pit's bottom, at the dead centre of the world, Dante and Virgil emerge on the beach of the island mountain of Purgatory. At the summit of Purgatory, where repentant sinners are purged of their sins, Virgil departs, having led Dante as far as human knowledge is able, to the threshold of Paradise. There Dante is met by Beatrice, embodying the knowledge of divine mysteries bestowed by Grace, who leads him through the successive ascending levels of heaven to the Empyrean, where he is allowed to glimpse, for a moment, the glory of God.
+        </p>
+        <p>Dante is guided by the Roman poet Virgil, who represents the epitome of human knowledge, from the dark wood through the descending circles of the pit of Hell (Inferno). Passing Lucifer at the pit's bottom, at the dead centre of the world, Dante and Virgil emerge on the beach of the island mountain of Purgatory. At the summit of Purgatory, where repentant sinners are purged of their sins, Virgil departs, having led Dante as far as human knowledge is able, to the threshold of Paradise. There Dante is met by Beatrice, embodying the knowledge of divine mysteries bestowed by Grace, who leads him through the successive ascending levels of heaven to the Empyrean, where he is allowed to glimpse, for a moment, the glory of God.
         </p>
         <h5>Gustave Doré's Illustrations</h5>
   <div class="rows">
