--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     <div class="row" id="header-div">
        <div class="col-xs-12">
             <header>
-              <h1 class="text-center" id='title'>Dante Alighieri: The Great Italian Poet</h1>
+              <h1 class="text-center" id='title'>Dante Alighieri: The Great Italian Poet</h1>    <div class='rows1'>
+                <div class='columns1'>
+                  <h1 class='menu'><a href="#Life">Life</a></h1>
+                </div>
+                <div class='columns1'>
+                  <h1 class='menu'><a href="#Story">Story</a></h1>
+                </div>
+                <div class='columns1'>
+                  <h1 class='menu'><a href="#Work">Work</a></h1>
+                </div>
+                </div>
             </header>
         </div>
     </div>
+<img class='text-dividers' src='assets/images/text-div.png' alt='text-div'>
     <div class="row opacity" id="img-div">
         <h1 class='text-img'>"Midway upon the journey of our life,</h1>
         <h1 class='text-img'>I found myself within a forest dark,</h1>
         <h1 class='text-img'>For the straightforward pathway had been lost."</h1>
-        <p id='subquote'>- INFERNO, CANTO I; I - III verses</p>
+        <h1 id='subquote'>- INFERNO, CANTO I; I - III verses</h1>
            <img class="img-responsive, text-img" id="dante-al" src="assets/images/dante-statue.png" alt="Dante Alighieri">
     </div>
-    <div class='rows1'>
-      <div class='columns1'>
-        <h1 class='menu'><a href="#Life">Life</a></h1>
-      </div>
-      <div class='columns1'>
-        <h1 class='menu'><a href="#Story">Story</a></h1>
-      </div>
-      <div class='columns1'>
-        <h1 class='menu'><a href="#Work">Work</a></h1>
-      </div>
-      </div>
-    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div.png' alt='text-div'>
     <a id="Life"><div class="content" id="content1">
         <h2 id='special-h2'>
           His Life & Chronology
@@ -81,12 +81,12 @@
   <li>1321 - Dante falls ill on return from Venice, where he had been sent as ambassador by Guido Da Polenta, and dies September 13 or 14.</li>
       </ol>
     </div>
-    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div.png' alt='text-div'>
     <a id="Story"><div class="content" id="content2">
         <h2 id='text-statue'>
              The Master
         </h2>
-            <img class="dante-statue" src="assets/images/dante-picture.png" alt="Dante Alighieri Picture">
+        <img class="dante-statue" src="assets/images/dante-picture.png" alt="Dante Alighieri Picture">
         <p class='p2'>
             Dante Alighieri, probably baptized Durante di Alighiero degli Alighieri and often referred to simply as Dante, was an Italian poet. His Divine Comedy, originally called Comedia (modern Italian: Commedia) and later christened Divina by Giovanni Boccaccio, is widely considered the most important poem of the Middle Ages and the greatest literary work in the Italian language.
         </p>
@@ -94,7 +94,7 @@
             Dante was instrumental in establishing the literature of Italy, and his depictions of Hell, Purgatory and Heaven provided inspiration for the larger body of Western art. He is cited as an influence on Geoffrey Chaucer, John Milton and Alfred Tennyson, among many others. In addition, the first use of the interlocking three-line rhyme scheme, or the terza rima, is attributed to him. He is described as the "father" of the Italian language, and in Italy he is often referred to as il Sommo Poeta ("the Supreme Poet"). Dante, Petrarch, and Boccaccio are also called the tre corone ("three crowns") of Italian literature.
         </p>
     </div>
-    <img class='text-dividers' src='assets/images/text-div-2.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div.png' alt='text-div'>
     <a id="Work"><div class="content" id="content3">
         <h2>
           His Work: The Divine Comedy
@@ -135,7 +135,7 @@
   </div>
     </div>
     </div>
-    <img class='text-dividers' id='second-divider' src='assets/images/text-div-3.png' alt='text divider'>
+    <img class='text-dividers' src='assets/images/text-div.png' alt='text-div'>
     <div class="row">
         <div class="footer col-xs-12" id="footer">
           <img id='dante-bust' onclick="playSong()" src="assets/images/dante-bust.png" alt='Dante Alighieri Bust'>
